tests + convenience functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,4 @@
-/cmake-build-debug/
-.DS_Store
-.idea
-*.iml
-example/clang_commands.sh
-example/main
-example/main.cpp.o
-example/run.sh
-build
-
-
-# Added by cargo
-
 /target
+
+# For comparison purposes.
+/src/rectpack2D
